--- a/iox9/build.gradle
+++ b/iox9/build.gradle
@@ -28,4 +28,12 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.10'
     // https://mvnrepository.com/artifact/org.yaml/snakeyaml
     compile group: 'org.yaml', name: 'snakeyaml', version: '1.8'
+    // https://mvnrepository.com/artifact/com.github.sarxos/webcam-capture
+    compile group: 'com.github.sarxos', name: 'webcam-capture', version: '0.3.4'
+    // https://mvnrepository.com/artifact/com.github.sarxos/webcam-capture-driver-ipcam
+    compile group: 'com.github.sarxos', name: 'webcam-capture-driver-ipcam', version: '0.3.11'
+    // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+    // https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12
+    testCompile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.25'
 }
