--- a/iox9/build.gradle
+++ b/iox9/build.gradle
@@ -37,5 +37,5 @@ dependencies {
     // https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12
     testCompile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.25'
     // https://mvnrepository.com/artifact/postgresql/postgresql
-    compile group: 'postgresql', name: 'postgresql', version: '9.0-801.jdbc4'
+    compile group: 'org.postgresql', name: 'postgresql', version: '42.1.1'
 }
