Include graphs and update values

--- a/iox9/build.gradle
+++ b/iox9/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
     // https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12
     testCompile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.25'
+    // https://mvnrepository.com/artifact/eu.hansolo/Medusa
+    compile group: 'eu.hansolo', name: 'Medusa', version: '4.8'
     // compile jar files
     compile fileTree(dir: 'jar', include: ['*.jar'])
     // https://mvnrepository.com/artifact/org.openpnp/opencv
