--- a/iox9/build.gradle
+++ b/iox9/build.gradle
@@ -44,4 +44,6 @@ dependencies {
     compile group: 'org.openpnp', name: 'opencv', version: '3.2.0-1'
     // https://mvnrepository.com/artifact/postgresql/postgresql
     compile group: 'org.postgresql', name: 'postgresql', version: '42.1.1'
+    // https://mvnrepository.com/artifact/commons-httpclient/commons-httpclient
+    compile group: 'commons-httpclient', name: 'commons-httpclient', version: '3.1'
 }
