--- a/iox9/src/main/resources/iox9config.yaml
+++ b/iox9/src/main/resources/iox9config.yaml
@@ -63,7 +63,7 @@ views:
     -
         id: entrance_panel
         class: "PanelIn"
-        listen_notifications: true
+        notifiable: true
         publishers:
             - entrance_camera
     -
