Finish configuration loader first implementation

--- a/iox9/src/main/resources/iox9config.yaml
+++ b/iox9/src/main/resources/iox9config.yaml
@@ -64,8 +64,11 @@ views:
         id: entrance_panel
         class: "PanelIn"
         notifiable: true
-        publishers:
+        processors_of_interest:
             - entrance_camera
+        statistics_of_interest:
+            - weekly_statistics
+            
     -
         id: exit_panel
         class: "PanelOut"
